<resources>
    <string name="picture_save">Изображение сохранено</string>
    <string name="draw_something">Нужно что-то нарисовать</string>
    <string name="permission_storage_info">У приложения нет доступа к директории, где хранятся все изображения.
        Приложение не сможет сохранить картинку так, чтобы ею можно было поделиться</string>
    <string name="provide_access">Предоставить доступ</string>
    <string name="ban_info">У приложения нет доступа к директории, где хранятся все изображения.
        Приложение не сможет сохранить картинку так, чтобы ею можно было поделиться. Восстановить доступ получится только через настройки</string>
    <string name="open_settings">Открыть настройки</string>
    <string name="cancel">Отмена</string>
    <string name="permission_not_granted">Разрешение не предоставлено</string>
    <string name="apply">Применить</string>
    <string name="load_picture">Загрузка изображения…</string>
    <string name="stroke_canvas">Размер холста</string>
    <string name="alpha">Непрозрачность</string>
    <string name="select_color">Выберите цвет</string>
    <string name="save">Сохранить</string>
    <string name="settings_canvas">Настройка холста</string>
    <string name="delete">Удалить</string>
    <string name="share">Поделиться</string>
    <string name="select_photo">Выбрать фото</string>
</resources>