<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="350dp"
    android:minHeight="350dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".PermissionsDialogFragment">

    <LinearLayout
        android:id="@+id/containerRequest"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="top"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:gravity="center"
            android:text="@string/permission_storage_info" />

        <Button
            android:id="@+id/btnAccess"
            android:layout_width="210dp"
            android:layout_height="wrap_content"
            android:text="@string/provide_access"
            android:layout_marginTop="15dp"
            android:textAllCaps="true"
            android:layout_gravity="center"
            android:backgroundTint="@color/secondary"
            android:textColor="@android:color/white"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/containerBan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:gravity="center"
            android:text="@string/ban_info" />

        <Button
            android:id="@+id/btnOpenSettings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/open_settings"
            android:layout_marginTop="15dp"
            android:backgroundTint="@color/secondary"
            android:textAllCaps="true"
            android:layout_gravity="center"
            android:textColor="@android:color/white"/>

    </LinearLayout>

    <Button
        android:id="@+id/btnCancel"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        android:textAllCaps="true"
        android:layout_marginTop="10dp"
        android:backgroundTint="@color/secondary"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>